--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "react-vite-recommended-lists",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "1.0.0",
   "type": "module",
+  "description": "A react vite component for recommended list options that can be dismissed, or take a custom action",
+  "main": "dist/index.js", 
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepublishOnly": "npm run build"
+
   },
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "keywords": ["react", "components"],
+  "author": "kaythedev",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
