--- a/package.json
+++ b/package.json
@@ -4,26 +4,29 @@
   "version": "1.0.2",
   "type": "module",
   "description": "A react vite component for recommended list options that can be dismissed, or take a custom action",
-  "main": "dist/index.js", 
+  "main": "dist/index.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "prepublishOnly": "npm run build"
-
   },
   "files": [
     "dist",
     "README.md"
   ],
-  "keywords": ["react", "components"],
+  "keywords": [
+    "react",
+    "components"
+  ],
   "author": "kaythedev",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.0.0",
+    "framer-motion": "^11.3.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
