--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "react-vite-recommended-lists",
   "private": false,
-  "version": "1.0.2",
+  "version": "1.1.8",
   "type": "module",
   "description": "A react vite component for recommended list options that can be dismissed, or take a custom action",
   "main": "dist/index.js",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "build": "tsc",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepublishOnly": "npm run build",
     "predeploy": "npm run build",
@@ -16,24 +16,28 @@
   },
   "files": [
     "dist",
+    "assets",
     "README.md"
   ],
   "keywords": [
     "react",
     "components"
   ],
+  "types": "dist/index.d.ts",
   "author": "kaythedev",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.0.0",
     "framer-motion": "^11.3.30",
+    "path": "^0.12.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/node": "^22.5.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
