--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-vite-recommended-lists",
   "private": false,
-  "version": "2.0.0",
+  "version": "2.0.1",
   "type": "module",
   "description": "A react vite component for recommended list options that can be dismissed, or take a custom action",
   "main": "dist/index.js",
   "scripts": {
     "dev": "vite",
-    "build": "tsc",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepublishOnly": "npm run build",
